--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -1,5 +1,8 @@
 <mat-card>
   <mat-card-content>
+    <div class='header'>
+      <p>123</p>
+    </div>
     <div class='card-box'>
       <div class='card-header'>
         <div class='picture'>
@@ -38,14 +41,23 @@
             <span class="category" *ngIf="item.areaName2">
               {{ item.areaName2 | langFilter: lang }}
             </span> -->
-            <p>{{item.id}} {{item.planName}} {{item.spotName}}</p>
+            
           </div>
           <div class='rt'>
-            <div>{{item.releaseCreateDatetime}}</div>
-            <div>{{item.pvQtyAll}}</div>
+            
           </div>
           
         </div>
+      </div>
+
+      <div class='card-bottom'>
+        <mat-list>
+          <mat-list-item>
+            <p>{{item.id}} {{item.planName}} {{item.spotName}}</p>
+            <div>{{item.releaseCreateDatetime}}</div>
+            <div>{{item.pvQtyAll}}</div>
+          </mat-list-item>
+        </mat-list>
       </div>
     </div>
   </mat-card-content>
