--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -3,6 +3,7 @@
   <app-planspot-list-item
     *ngFor="let item of details$"
     [item]="item"
+    (linked)="linktoDetail($event)"
   >
   </app-planspot-list-item>
 </app-planspot-list>
