--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
     <div class='header'>
-      <p>123</p>
+      <p>{{item.id}}</p>
     </div>
     <div class='card-box'>
       <div class='card-header'>
