--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -20,8 +20,8 @@
       <mat-form-field class='condition'>
         <mat-select></mat-select>
       </mat-form-field>
-      <button mat-fab class="spot"></button>
-      <button mat-fab class="plan"></button>
+      <button class="spot"></button>
+      <button class="plan"></button>
     </div>
     
   </mat-card-content>
