--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -61,7 +61,7 @@
         }
 
         .mat-form-field.condition{
-          ::ng-deep.mat-form-field-flex{
+          ::ng-deep.mat-form-field-infix{
             width: 90px;
           }
         }
