--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -20,6 +20,7 @@
         border-radius: 17px;
         padding: 0 17px;
         font-size: 16px;
+        -webkit-appearance: none;
       }
 
       &.button{
