--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -1,3 +1,4 @@
+<div class='container' (swipe)= "onSwipe($event)">
 <app-planspot-selector></app-planspot-selector>
 <app-planspot-list (scrolled)="onScrollDown()">
   <app-planspot-list-item
@@ -7,3 +8,4 @@
   >
   </app-planspot-list-item>
 </app-planspot-list>
+</div>
