--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -1,6 +1,7 @@
 @import "../../../../../assets/scss/vars";
 
-::ng-deep .mat-card{
+//::ng-deep .mat-card{
+#planspot-list-item{
   padding: 0;
   .header{
     margin: 0 16px;
