--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -13,6 +13,7 @@ $color-gld02: #6f4b00;
 $color-gld03: #8f7848;
 $color-gld04: #9a721e;
 $color-gld04cf:#9a721ecf;
+$color-gld05: #BF9F60;
 
 $color-gry00: #f6f6f6;
 $color-gry01: #eaeaea;
