--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -4,7 +4,44 @@
 #planspot-list-item{
   padding: 0;
   .header{
-    margin: 0 16px;
+    margin: 0 16px 4px;
+    display: flex;
+    font-weight: normal;
+    .lt{
+      flex-basis: 32px;
+      .avatar{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img{
+          width: 32px;
+          height: 32px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+        .username{
+          font-size: 11px;
+        }
+      }
+
+    }
+    .rt{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .mark{
+        img{
+          width: 41px;
+          height: 16px;
+          margin: auto 12px;
+        }
+      }
+      .title{
+        font-size: 13px;
+        color: #000;
+      }
+    }
   }
 
   .card-box{
@@ -25,8 +62,8 @@
       top: 0;
       width: 100%;
       height: 50%;
-      margin-top: 120px;
-      z-index: 3;
+      margin-top: 100px;
+      z-index: 4;
       cursor: pointer;
     }
 
@@ -48,132 +85,134 @@
       }
 
       .picture{
-
         ::ng-deep .owl-prev,
-      ::ng-deep .owl-next {
-        position: absolute;
-        top: 50%;
-        display: block !important;
-        width: 14px;
-        height: 100px;
-        background-color: transparent;
-        border: 0 solid black;
-        transform: translateY(-50%);
-        z-index: auto;
-        display: flex!important;
-        align-items: center;
-      }
-      .owl-carousel{
-        ::ng-deep.owl-stage-outer{
-          border-radius: 10px 10px 0 0;
-          -webkit-border-radius: 10px 10px 0 0;
-          -moz-border-radius: 10px 10px 0 0;
-          background-color: $color-gry04;
+        ::ng-deep .owl-next {
+          position: absolute;
+          top: 50%;
+          display: block !important;
+          width: 14px;
+          height: 100px;
+          background-color: transparent;
+          border: 0 solid black;
+          transform: translateY(-50%);
+          z-index: auto;
+          display: flex!important;
+          align-items: center;
         }
-        z-index: 2;
-      }
-  
-      ::ng-deep .owl-prev {
-        left: -14px;
-      }
-    
-      ::ng-deep .owl-next {
-        right: 0;
-      }
-    
-      ::ng-deep .owl-prev i,
-      ::ng-deep .owl-next i {
-        color: #ccc;
-        transform: scale(1);
-      }
-    
-      ::ng-deep .owl-dots {
-        position: absolute;
-        // top: 12px;
-        // right: 6px;
-        bottom: 4px;
-        left: 0;
-        right: 0;
-        margin: auto;
-        z-index: 100;
-    
-        .owl-dot span {
-          width: 6px;
-          height: 6px;
-          margin: 3px 4px;
-          background-color: #fff;
+        ::ng-deep.owl-carousel{
+          ::ng-deep.owl-stage-outer{
+            border-radius: 10px 10px 0 0;
+            -webkit-border-radius: 10px 10px 0 0;
+            -moz-border-radius: 10px 10px 0 0;
+            background-color: $color-gry04;
+          }
+          z-index: 2;
+          &.owl-drag{
+            z-index: 5;
+          }
         }
   
-        .owl-dot.active span{
-          background-color: #666;
+        ::ng-deep .owl-prev {
+          left: -14px;
         }
-      }
+      
+        ::ng-deep .owl-next {
+          right: 0;
+        }
+      
+        ::ng-deep .owl-prev i,
+        ::ng-deep .owl-next i {
+          color: #ccc;
+          transform: scale(1);
+        }
+      
+        ::ng-deep .owl-dots {
+          position: absolute;
+          // top: 12px;
+          // right: 6px;
+          bottom: 4px;
+          left: 0;
+          right: 0;
+          margin: auto;
+          z-index: 100;
+      
+          .owl-dot span {
+            width: 6px;
+            height: 6px;
+            margin: 3px 4px;
+            background-color: #fff;
+          }
+    
+          .owl-dot.active span{
+            background-color: #666;
+          }
+        }
   
-      ::ng-deep .owl-carousel .owl-stage {
-        padding-left: 0 !important;
-      }   
-    
-      .buttons {
-        position: absolute;
-        bottom: 1.2em;
-        right: 0;
-        z-index: 1;
-    
-        .list-horizontal {
-          padding: 0;
-          float: right;
-          // margin-top: -10px;
-          margin-top: 10px;
-          // opacity: 0.5;
-    
-          .mat-list-item {
-            display: inline-block;
-            height: auto;
-            // width: auto;
-            width: 36px;
-    
-            ::ng-deep.mat-list-item-content {
-              padding: 0 8px;
-            }
-    
-            .material-icons,
-            .material-icons-outlined {
-              font-size: 16px;
-              // color: #999;
-              color: #fff;
-              // padding-right: 4px;
-            }
-    
-            .val {
-              font-size: 14px;
-              color: #999;
-            }
-    
-            .label {
-              position: absolute;
-              margin: auto;
-              top: -15px;
-              left: 0;
-              right: 0;
-              font-size: 10px;
-              font-weight: bold;
-              text-align: center;
-              color: #fff;
-            }
-    
-            .item {
-              position: absolute;
-              margin: auto;
-              top: 0;
-              left: 0;
-              right: 0;
-              font-size: 10px;
-              text-align: center;
-              color: #fff;
+        ::ng-deep .owl-carousel .owl-stage {
+          padding-left: 0 !important;
+        }   
+      
+        .buttons {
+          position: absolute;
+          bottom: 1.2em;
+          right: 0;
+          z-index: 1;
+      
+          .list-horizontal {
+            padding: 0;
+            float: right;
+            // margin-top: -10px;
+            margin-top: 10px;
+            // opacity: 0.5;
+      
+            .mat-list-item {
+              display: inline-block;
+              height: auto;
+              // width: auto;
+              width: 36px;
+      
+              ::ng-deep.mat-list-item-content {
+                padding: 0 8px;
+              }
+      
+              .material-icons,
+              .material-icons-outlined {
+                font-size: 16px;
+                // color: #999;
+                color: #fff;
+                // padding-right: 4px;
+              }
+      
+              .val {
+                font-size: 14px;
+                color: #999;
+              }
+      
+              .label {
+                position: absolute;
+                margin: auto;
+                top: -15px;
+                left: 0;
+                right: 0;
+                font-size: 10px;
+                font-weight: bold;
+                text-align: center;
+                color: #fff;
+              }
+      
+              .item {
+                position: absolute;
+                margin: auto;
+                top: 0;
+                left: 0;
+                right: 0;
+                font-size: 10px;
+                text-align: center;
+                color: #fff;
+              }
             }
           }
         }
-      }
 
 
         .thumbmain{
@@ -197,7 +236,7 @@
         position: absolute;
         top: 9px;
         left: 7px;
-        z-index: 3;
+        z-index: 5;
         width: 96%;
         font-size: 12px;
         display: inline-flex;
@@ -214,24 +253,24 @@
             white-space: nowrap;
           }
           .category{
-            background-color: $color-gld04cf;
-            padding: 0 4px;
+            background-color: #B6C2A6;
+            padding: 0 6px;
             line-height: 26px;
             margin-left: 7px;
             // border: 1px solid $color-gld04;
             border-radius: 3px;
-            color: #fff;
+            color: rgba(0,0,0,.87);;
             white-space: nowrap;
             max-width: 34vw;
             overflow: hidden;
-          text-overflow: ellipsis;
+            text-overflow: ellipsis;
+            opacity: 0.9;
           }
         }
         .rt{
           img{
             height: 26px;
           }
-
           .add-to-favorite {
             // @include ios-reset;
             box-shadow: none;
@@ -330,10 +369,58 @@
     }
 
     .card-bottom{
-      border-bottom: #edeae8 solid 1px ;
-      border-left:  #edeae8 solid 1px ;
-      border-right:  #edeae8 solid 1px ;
+      border-bottom: #707070 solid 1px ;
+      border-left:  #707070 solid 1px ;
+      border-right:  #707070 solid 1px ;
       border-radius: 0 0 10px 10px;
+      min-height: 200px;
+      .bottom-view{
+        display: flex;
+        flex-direction: row;
+        font-size: 11px;
+        color:#8E8E8E;
+        height: 34px;
+        align-items: center;
+        .date{
+          flex-basis: 84px;
+          padding: 12px;
+        }
+        .view{
+          flex-basis: 60px;
+        }
+        button.add-to-favorite{
+          box-shadow: none;
+          min-width: auto;
+          padding: 0;
+          width: 25px;
+          height: 25px;
+          // margin-right: 12px;
+          line-height: initial;
+          margin-left: 6px;
+
+          &::before{
+            content: "";
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            background: url("../../../../../assets/img/icon_fav_b.svg");
+            background-repeat: no-repeat;
+          }
+
+          &.on{
+            // background-color: $color-pnk04;
+            &::before{
+              background: url("../../../../../assets/img/icon_fav_b_on.svg");
+              background-repeat: no-repeat;
+            }
+          }
+
+          ::ng-deep.mat-button-ripple{
+            width: 0;
+            height: 0;
+          }
+        }
+      }
 
       .mat-list-base{
         margin-bottom: 12px;
