--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class='row info'>
       <div class='count'>
-        120<span class="sm">&nbsp;{{ "Count" | translate }}</span>
+        {{count}}<span class="sm">&nbsp;{{ "Count" | translate }}</span>
       </div>
       <mat-form-field class='condition'>
         <mat-select></mat-select>
