--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -22,6 +22,7 @@ $color-gry03: #949494;
 $color-gry04: #807e7d;
 $color-gry05: #757575;
 $color-gry06: #696969;
+$color-gry07: #A8A8A8;
 
 $color-pnk00: #e58e90;
 $color-pnk02: #f3787e;
