--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -384,7 +384,7 @@
         // flex-direction: row;
         font-size: 11px;
         color:#8E8E8E;
-        height: 34px;
+        height: 26px;
         align-items: center;
         position: relative;
         .date{
@@ -466,6 +466,8 @@
             line-height: 1.6;
             color: #272727;
             word-break: break-all;
+            margin-block-start: 0.5em;
+            margin-block-end: 0.5em;
           }
 
           p{
@@ -476,6 +478,8 @@
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 3;
             overflow: hidden;
+            margin-block-start: 0.5em;
+            margin-block-end: 0.5em;
           }
 
           ::ng-deep.mat-list-item-content{
@@ -493,6 +497,7 @@
           .directions{
             padding-right: 3px;
             padding-left: 2px;
+            white-space: nowrap;
         
             &::before {
               display: inline-block;
@@ -500,7 +505,7 @@
               width: 16px;
               height: 16px;
               padding-right: 1px;
-              vertical-align: sub;
+              vertical-align: -3px;
             }
           }
 
@@ -538,7 +543,7 @@
               width: 16px;
               height: 16px;
               padding-right: 4px;
-              vertical-align: sub;
+              vertical-align: -3px;
             }
           }
 
