--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -72,8 +72,7 @@
             </button>
           </mat-list-item>
           <ng-container *ngIf="item.isPlan; else isSpot" >
-            <mat-list-item class="row psname">
-              {{genPlanSpotNames(item.planSpotNames)}}
+            <mat-list-item class="row psname" [innerHtml]=genPlanSpotNames(item.planSpotNames)>
             </mat-list-item>
             <mat-list-item class="row mt02">
               <span class="timerequired">
@@ -91,7 +90,6 @@
             <mat-list-item class="row">
               <p>{{item.overview | langFilter:lang}}</p>
             </mat-list-item>
-            <!-- Remoju spot 最寄駅 -->
             <mat-list-item
               class="row">
               <span class="directions">
