--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -466,20 +466,33 @@
             line-height: 1.6;
             color: #272727;
             word-break: break-all;
-            margin-block-start: 0.5em;
-            margin-block-end: 0.5em;
+            margin: 6px 12px;
+            width: auto;
+
+            span{
+              display: inline-flex;
+              padding: 0 4px;
+              // background-color: #949494;
+              border: 1px solid #bdbdbd;
+              border-radius: 4px;
+              // color: #fff;
+              margin-right: 2px;
+              margin-bottom: 2px;
+              // white-space: nowrap;
+            }
           }
 
           p{
-            font-size: 11px;
-            line-height: 1.6;
+            // font-size: 11px;
+            // line-height: 1.6;
             color: #272727;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 3;
-            overflow: hidden;
+            // -webkit-line-clamp: 3;
+            // overflow: hidden;
             margin-block-start: 0.5em;
             margin-block-end: 0.5em;
+            @include text-truncate(11, 1.6, 3, #fff);
           }
 
           ::ng-deep.mat-list-item-content{
