--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -647,4 +647,30 @@ $color-grn01: #81C5B4;
   }
 }
 
+@mixin text-truncate($font-size, $line-height, $line, $bg) {
+  position: relative;
+  max-height: $font-size * $line-height * $line + px;
+  font-size: $font-size + px;
+  line-height: $line-height;
+  word-break: break-all;
+  overflow: hidden;
+  &::before,
+  &::after {
+    position: absolute;
+    background: $bg;
+  }
+  &::before {
+    content: '...more';
+    top: $font-size * $line-height * ($line - 1) + px;
+    right: 0;
+    width: 3.3em;
+    color: #757575;
+  }
+  &::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
