--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -22,16 +22,15 @@
       </mat-form-field>
       <!-- <button class="spot" [attr.data-index]="0" [attr.data-status]="isSpot" [ngClass]="{'on':isSpot}" (click)="onSwitchPlanSpot($event)"></button>
       <button class="plan" [attr.data-index]="1" [attr.data-status]="isPlan" [ngClass]="{'on':isPlan}" (click)="onSwitchPlanSpot($event)"></button> -->
-      <div class="switch-toggle switch-3 switch-candy">
-
-        <input id="spot" name="state-d" type="radio" checked="" />
-        <label for="spot" class="spot" onclick="">Spot</label>
+      <div class="switch-toggle">
+        <input id="spot" name="state" type="radio" value="spot" (change)="onSwitchPlanSpot($event)" checked="" />
+        <label for="spot" class="spot" value="spot">Spot</label>
       
-        <input id="all" name="state-d" type="radio" checked="checked" />
-        <label for="all" class="all" onclick="">All</label>
+        <input id="all" name="state" type="radio" value="all" (change)="onSwitchPlanSpot($event)" checked="checked" />
+        <label for="all" class="all" value="all">All</label>
       
-        <input id="plan" name="state-d" type="radio" />
-        <label for="plan" class="plan" onclick="">Plan</label>
+        <input id="plan" name="state" type="radio" value="plan" (change)="onSwitchPlanSpot($event)" />
+        <label for="plan" class="plan">Plan</label>
       
       </div>
     </div>
