--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -4,6 +4,13 @@ infinite-scroll
 [infiniteScrollUpDistance]="1.5"
 [infiniteScrollThrottle]="150"
 (scrolled)="scrolledEmit()">
+  <mat-card id="nolist" *ngIf="!isList">
+    <mat-card-content>
+      みんなのおすすめは、見つかりませんでした。<br>
+      代わりにGoogleにてヒットしたスポットを表示します。<br>
+      （これらのスポットもプランに入れることができます。）
+    </mat-card-content>
+  </mat-card>
   <ng-content>
   </ng-content>
 </div>
