--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.scss
@@ -7,3 +7,11 @@
 .box{
   margin-top: 16px;
 }
+
+#nolist{
+  padding: 0 16px 16px;
+  .mat-card-content{
+    font-size: 12px;
+    text-align: center;
+  }
+}
