--- a/src/app/parts/nav-menu/nav-menu.component.html
+++ b/src/app/parts/nav-menu/nav-menu.component.html
@@ -31,6 +31,7 @@
           <a mat-list-item (click)="onNavgate('spots')">{{ "SearchBySpot" | translate }}</a>
           <a mat-list-item (click)="onNavgate('plans')">{{ "SearchByModelPlan" | translate }}</a>
           <a mat-list-item (click)="onNavgate('mypage','favorite')">{{ "SearchByFavorite" | translate }}</a>
+          <a mat-list-item (click)="onNavgate('planspot')">プランスポット一覧</a>
         </mat-nav-list>
       </mat-nav-list>
       <mat-nav-list>
