--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -738,3 +738,13 @@
     }
   }
 }
+
+@media screen and (min-width: 415px) and (max-width: 1024px) { 
+  #planspot-list-item{
+    width: calc(100%/2);
+    float: left;
+    .header{
+      min-height: 56px;
+    }
+  }  
+}
