--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -165,9 +165,9 @@ $menu_line: 2px;
 
     span {
       &:nth-of-type(1) {
-        -webkit-transform: translateY(($menu_height - $menu_line)/2)
+        -webkit-transform: translateY(($menu_height - $menu_line)*0.5)
           rotate(-45deg);
-        transform: translateY(($menu_height - $menu_line)/2) rotate(-45deg);
+        transform: translateY(($menu_height - $menu_line)*0.5) rotate(-45deg);
       }
 
       &:nth-of-type(2) {
